--- a/src/Config.json
+++ b/src/Config.json
@@ -5,5 +5,8 @@
 	"warnedEmoji": "",
 	"loadingEmoji": "",
 	"bulletPoint": "",
-	"arrowRight": ""
+	"arrowRight": "",
+	"devs": [
+		"493453098199547905"
+	]
 }
