Improve package.json

--- a/package.json
+++ b/package.json
@@ -1,22 +1,19 @@
 {
-  "name": "ooooh-its-a-secret",
+  "name": "plasma",
   "version": "1.0.0",
-  "description": "Unknown yet...",
+  "description": "Plasma is a helpful Discord bot with many features, such at leveling, message tracking, invite management, giveaways and more!",
   "main": "Index.ts",
   "scripts": {
     "start": "npx tsc && node out/Index.js"
   },
   "author": "tehcheese",
-  "repository": "https://github.com/WhoCutTheCheese/Something-New",
-  "license": "ISC",
-  "overrides": {
-    "@vladfrangu/async_event_emitter": "2.2.2"
-  },
+  "repository": "https://github.com/WhoCutTheCheese/Plasma",
+  "license": "LGPL-3.0-only",
   "dependencies": {
     "colors": "^1.4.0",
     "discord.js": "^14.14.1",
     "dotenv": "^16.3.1",
     "mongoose": "^8.0.2",
-    "typescript": "^5.3.2"
+    "typescript": "^5.3.3"
   }
 }
